@@ -1,8 +1,8 @@
 Package: sybil
 Type: Package
 Title: Efficient Constrained Based Modelling
-Version: 2.1.3
-Date: 2019-02-21
+Version: 2.1.4
+Date: 2019-02-25
 Authors@R: c(
          person("Mayo", "Roettger", role = c("cre"), email = "mayo.roettger@hhu.de"),
 	     person("Gabriel", "Gelius-Dietrich", role = "aut"),
@@ -56,7 +56,7 @@ Collate: generics.R validmodelorg.R validoptsol.R validreactId.R validreact.R
         sysBiolAlg_mtfClass.R sysBiolAlg_mtfEasyConstraintClass.R
         sysBiolAlg_roomClass.R sybilLogClass.R upgradeModelorg.R
         mergeReact2Modelorg.R
-Packaged: 2019-02-21 16:35:00 UTC; mayo
+Packaged: 2019-02-25 13:55:00 UTC; mayo
 Author: Mayo Roettger [cre],
   Gabriel Gelius-Dietrich [aut],
   C. Jonathan Fritzemeier [ctb],
